--- a/projects/evaluate-news-nlp/package.json
+++ b/projects/evaluate-news-nlp/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "aylien_textapi": "^0.7.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mini-css-extract-plugin": "^0.8.0",
@@ -30,6 +31,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
