--- a/projects/evaluate-news-nlp/package.json
+++ b/projects/evaluate-news-nlp/package.json
@@ -37,4 +37,10 @@
     "style-loader": "^1.0.1",
     "webpack-dev-server": "^3.9.0"
   }
+
+  "jest": {
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "babel-jest"
+    }
+    
 }
