--- a/projects/evaluate-news-nlp/package.json
+++ b/projects/evaluate-news-nlp/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "aylien_textapi": "^0.7.0",
+    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -36,11 +37,10 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "webpack-dev-server": "^3.9.0"
-  }
-
+  },
   "jest": {
     "moduleNameMapper": {
       "^.+\\.(css|less|scss)$": "babel-jest"
     }
-    
+  }
 }
