--- a/projects/final/.env
+++ b/projects/final/.env
@@ -1,2 +1,3 @@
-API_ID=https://api.darksky.net/forecast/[key]/[latitude],[longitude]
-API_KEY=7a14b138094cbdfb47dfda6e4bec647a
+DS_KEY=7a14b138094cbdfb47dfda6e4bec647a
+PB_KEY=14712948-387f68c205e3019bb7ab58b02
+GN_USER=fritscka
