--- a/projects/final/package.json
+++ b/projects/final/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "example-project",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "ProjectKatie",
+  "version": "0.0.1",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/server/index.js",
+    "start": "node src/server/server.js",
+    "build": "webpack --config webpack.config.js",
     "build-prod": "webpack --config webpack.prod.js",
-    "build-dev": "webpack-dev-server  --config webpack.dev.js --open"
+    "build-dev": "webpack  --config webpack.dev.js"
   },
   "keywords": [],
   "author": "",
@@ -22,7 +22,7 @@
     "node-fetch": "^2.6.0",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "terser-webpack-plugin": "^2.2.1",
-    "webpack": "^4.41.2",
+    "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
     "workbox-webpack-plugin": "^4.3.1"
   },
@@ -31,12 +31,12 @@
     "@babel/preset-env": "^7.7.4",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
-    "css-loader": "^3.2.1",
+    "css-loader": "^3.4.0",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^24.9.0",
     "node-sass": "^4.13.0",
     "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.1",
+    "style-loader": "^1.1.1",
     "webpack-dev-server": "^3.9.0"
   },
   "jest": {
